# BetterCourtFinderV2

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/: app.py  main.py  tasks.py
src/models/: __init__.py  court.py
src/router/: badminton_schedule.py
src/services/: calendar.py  court_database.py  court_fetcher.py  court_updater.py  database.py
src/telegram_bot/: bot_config.py  handlers.py  telegram_bot.py
src/utils/: constants.py  court_formatter.py
