[project]
name = "bettercourtfinderv2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "ics>=0.7.2",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "uvicorn>=0.34.2",
]
