[project]
name = "bettercourtfinderv2"
version = "0.1.0"
description = "A Better way to find courts"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "fastapi-utilities>=0.3.1",
    "ics>=0.7.2",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "toml>=0.10.2",
    "uvicorn>=0.34.2",
]
